# bfxr

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.rtf  LICENSE.txt  README  README.md  appveyor.yml  bfxr.h  bfxr_lang_en.h  cpack-config.cmake  icon.xcf  main.cc  pinknumber.cc  pinknumber.h  sfxrparams.cc  sfxrparams.h  synth.cc  synth.h  tool.py
cmake-modules/: FindSDL2.cmake
install/: bintray-linux.json  bintray-osx.json  dmg-install.xcf  nsis-header.xcf  nsis-wizard.xcf  wix-banner.xcf
